--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 <body>
 
+
     <header class="main-header">
-        <img class="logo" src="assets/logo.png" alt="logo" />
-        <h1>Dakota Bistro</h1>
+        <img class="logo animate-pop-in" src="assets/logo.png" alt="logo" />
+        <h1 class="header-title animate-pop-in">Dakota Bistro</h1>
         <ul class="main-nav">
             <li class="dropdown">
                 <a href="breakfast_page.html" target="_blank">Breakfast</a>
@@ -36,7 +37,11 @@
             <li><a href="lunch_page.html" target="_blank">Lunch</a></li>
             <li><a href="dinner_page.html" target="_blank">Dinner</a></li>
         </ul>
+
+        <p class="header-button animate-pop-in"><a href="star_wars.html" class="button">Star Wars</a></p>
     </header>
+
+
 
     <section>
         <p>At the Dakota Bistro, you decide what will be included in your meal by choosing from our varied list of fresh ingredients. Then your meal is custom made for you - no dry meals sitting under heat lamps! You'll receive exactly the meal you want, fresh and hot.</p>
@@ -64,7 +69,6 @@
                 src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
     </div>
 
-    <button onclick="window.location.href='star_wars.html'">Star Wars</button>
 
 
     <footer>
